gitops/components/argocd/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
    sectionName: https-argo
  hostnames:
    - "argo.secrets.isis.rl.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 443
